--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@
     background-color: #676767;
 }
 
+.bg-color-three-reasons {
+    background-color: #fff;
+}
+
 .ui-menu-color-home {
     background-color: #e67e22;
 }
@@ -42,6 +46,23 @@ h1, h2, h3, h4 {
 
 .inline-block {
     display: inline-block;
+}
+
+.row-table {
+    display: table;
+}
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30ox;
+    float: none;
+}
+
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
 }
 
 /* -------------------- Headings --------------------*/
@@ -130,7 +151,7 @@ header {
     letter-spacing: 2px;
 }
 
-/* -------------------- Colors ---------------------*/
+/* -------------------- Hover ---------------------*/
 
 .hvr-sweep-to-bottom:before {
     background: rgba(0, 0, 0, 0.3);
