--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,10 @@
     background-color: #525252;
 }
 
+.bg-color-personal-info {
+    background-color: #f4f4f4;
+}
+
 /* -------------------- General --------------------*/
 
 h1, h2, h3, h4 {
@@ -208,4 +212,15 @@ footer {
 
 #footer-details {
     padding: 20px;
+}
+
+/* -------------------- Three Reasons --------------------*/
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #e67e22;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
 }
